Added template to add bookmarks to database
Co-Authored-by: Emmapr123 <emmapriester@hotmail.com>

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,5 +1,8 @@
 <ul>
   <% $bookmark.each { |bookmark| %>
-    <li><%=bookmark%></li> 
+    <li><%=bookmark%></li>
   <% } %>
 </ul>
+<form action='/new_bookmark' method='get'>
+  <input type='submit' value='add_bookmark'>
+</form>
