deleted bookmark working

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -8,10 +8,11 @@
   <h1>Bookmarks:</h1>
     <ul>
       <% @mark.each do |bookmark| %>
-        <li>
+        <li class="bookmark" id="bookmark-<%= bookmark.id %>">
           <a href="<%= bookmark.url %>">
             <%= bookmark.title %>
-            <form action='/'>
+            <form action="/bookmark/<%= bookmark.id %>" method="post">
+              <input type="hidden" name="_method" value="DELETE">
               <input type='submit' value='delete'>
             </form>
           </a>
